--- a/app/index.css
+++ b/app/index.css
@@ -1,6 +1,19 @@
+@font-face {
+	font-family: 'Digital Mono';
+	src: url('/app/src/digital-7.mono.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: system;
+  font-style: normal;
+  font-weight: 300;
+  src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
+}
+
 body {
 	min-height: 100vh;
 	margin: 0;
+	font-family: 'system';
 }
 
 .container {
@@ -22,31 +35,81 @@ body {
 }
 
 .red {
-	background: red;
+	background: #f44336;
 }
 
 .blue {
-	background: blue;
+	background: #3f50b5;
 }
 
 .yellow {
-	background: yellow;
+	background: #ffeb3b;
 }
 
 .green {
-	background: green;
+	background: #4caf50;
 }
 
 .controls {
-	width: 30vw;
-	height: 50vh;
+	width: 420px;
+	height: 420px;
 	position: absolute;
-	top: 25%;
+	top: calc(50vh - 210px);
 	border-radius: 100%;
-	left: calc(50% - 15vw);
+	left: calc(50vw - 210px);
 	text-align: center;
-	background: white;
+	background: #b0bec5;
 	z-index: 9999;
-	line-height: 50vh;
 	font-size: 3em;
+}
+
+.controls-relative-container {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	border-radius: 100%;
+}
+
+.simon {
+	position: absolute;
+	top: calc(50% - .75em);
+	width: 100%;
+	text-align: center;
+}
+
+.counter {
+	position: absolute;
+	height: 72px;
+	width: 60px;
+	background-color: #000000;
+	color: red;
+	border: 1px solid white;
+	border-radius: 1px;
+	top: 40px;
+	left: calc(50% - 40px);
+	line-height: 72px;
+	text-align: right;
+	padding: 0 5px;
+	font-family: 'Digital Mono';
+	font-size: 60px;
+}
+
+.power {
+	position: absolute;
+	height: 48px;
+	width: 72px;
+	bottom: 50px;
+	left: calc(50% - 72px);
+	cursor: pointer;
+}
+
+.flash {
+	animation-name: flash;
+	animation-duration: 1s;
+}
+
+@keyframes flash {
+	0%		{opacity: 1;}
+	50%		{opacity: .5;}
+	100%	{opacity: 1;}
 }
