Game logic implemented, power button styled

--- a/app/index.css
+++ b/app/index.css
@@ -59,7 +59,7 @@ body {
 	left: calc(50vw - 210px);
 	text-align: center;
 	background: #b0bec5;
-	z-index: 9999;
+	z-index: 1;
 	font-size: 3em;
 }
 
@@ -77,21 +77,42 @@ body {
 	text-align: center;
 }
 
-.counter {
+.counter-bg {
 	position: absolute;
-	height: 72px;
+	height: 64px;
 	width: 60px;
+	color: #222;
 	background-color: #000000;
-	color: red;
-	border: 1px solid white;
 	border-radius: 1px;
 	top: 40px;
-	left: calc(50% - 40px);
+	left: calc(50% - 35px);
 	line-height: 72px;
 	text-align: right;
-	padding: 0 5px;
+	padding-right: 5px;
 	font-family: 'Digital Mono';
 	font-size: 60px;
+	z-index: 2;
+}
+
+.counter {
+	position: absolute;
+	height: 64px;
+	width: 60px;
+	color: red;
+	top: 40px;
+	left: calc(50% - 35px);
+	line-height: 72px;
+	text-align: right;
+	padding-right: 5px;
+	font-family: 'Digital Mono';
+	font-size: 60px;
+	z-index: 3;
+	transition: .4s;
+}
+
+.counter-faded {
+	color: #222;
+	transition: .4s;
 }
 
 .power {
@@ -99,8 +120,82 @@ body {
 	height: 48px;
 	width: 72px;
 	bottom: 50px;
-	left: calc(50% - 72px);
+	left: calc(50% - 32px);
 	cursor: pointer;
+}
+
+.label-off {
+	position: absolute;
+	bottom: 50px;
+	font-size: 32px;
+	left: calc(50% - 102px);
+}
+
+.label-on {
+	position: absolute;
+	bottom: 50px;
+	font-size: 32px;
+	right: calc(50% - 102px);
+}
+
+/* Power button */
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+	display:none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
 
 .flash {
